--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "juliacolavita",
-  "version": "0.0.1-2",
+  "name": "juliacolavita.com",
+  "subdomain": "juliacolavita",
+  "domains": [
+    "juliacolavita.com",
+    "www.juliacolavita.com"
+  ],
+  "version": "0.0.1-3",
   "private": true,
   "engines": {
     "node": "0.6.x",
@@ -14,7 +19,6 @@
     "underscore": "*",
     "connect": "*"
   },
-  "subdomain": "juliacolavita",
   "scripts": {
     "start": "coffee app.coffee"
   }
