--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
   ],
   "version": "0.0.1-28",
   "private": true,
+  "scripts": {
+    "start": "forever node_modules/.bin/babel-node --presets es2015 index.js"
+  },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.3.x"
+    "node": "5.x",
+    "npm": "3.x"
   },
   "dependencies": {
-    "jade": "*",
-    "stylus": "*",
+    "babel": "^6.3.26",
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "express": "*",
+    "jade": "^1.11.0",
     "nib": "*",
-    "coffee-script": "*",
-    "nap": "*",
-    "underscore": "*",
-    "express": "*"
+    "stylus": "*",
+    "underscore": "*"
   }
 }
