--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "browserify-dev-middleware": "^1.0.0",
     "express": "*",
+    "forever": "^0.15.1",
     "jade": "^1.11.0",
     "nib": "*",
+    "page": "^1.6.4",
     "stylus": "*",
     "underscore": "*"
   }
