--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "server": "node -r dotenv/config -r babel-core/register index.js",
     "start": "npm run server",
-    "deploy": "git add . && git commit -a -m 'deploying'; git push git@github.com:craigspaeth/juliacolavita.git master; git push https://git.heroku.com/juliacolavita.git"
+    "deploy": "git add . && git commit -a -m 'deploying'; git push git@github.com:craigspaeth/juliacolavita.git master; git push https://git.heroku.com/juliacolavita.git master"
   },
   "engines": {
     "node": "6.x",
